@@ -80,3 +80,4 @@
 - Add Family Crest quest.
 - Add mort myre stems and pears to bloom's effect, and add the sound effect for bloom.
 - Add proper sound effects for the explorer's ring and fix leaf-bladed sword's sound effects.
+- Fix wine of zamorak pickup interaction.
